added examples from lecture 4 on 9/2/20.

--- a/CS 3100/lecture_code_examples/CMakeLists.txt
+++ b/CS 3100/lecture_code_examples/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lecture_code_examples)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(lecture_code_examples main.cpp)
+add_executable(lecture_code_examples main.cpp intro_to_language.cpp intro_to_language.h)
