cleaned up the code to be submitted.

--- a/CS 3100/lecture_code_examples/CMakeLists.txt
+++ b/CS 3100/lecture_code_examples/CMakeLists.txt
@@ -6,10 +6,8 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(.)
 
 add_executable(lecture_code_examples
-        inputs/inputData.txt
-        outputs/OutputData.txt
         intro_to_language.cpp
         intro_to_language.h
         main.cpp
         point.cpp
-        point.h pointer.cpp)
+        point.h pointer.cpp LinkedList.h LinkedList.cpp)
