saving checkpoint for hw3 before its due tomorrow.

--- a/CS_7840/files/SoftComputing_Anaconda_Environment.yml
+++ b/CS_7840/files/SoftComputing_Anaconda_Environment.yml
@@ -1,4 +1,4 @@
-name: SoftComputing
+name: SoftComputing39
 channels:
   - defaults
 dependencies:
@@ -289,4 +289,4 @@ dependencies:
   - pip:
     - apyori==1.1.2
     - python-graphviz==0.19.1
-prefix: C:\Users\sanghui.han\Anaconda3\envs\SoftComputing
+prefix: C:\Users\sanghui.han\Anaconda3\envs\SoftComputing39
